force-app/main/default/objects/HT_Application__c/HT_Application__c.object-meta.xml
<CustomObject>
    <label>Application</label>
    <nameField>
        <displayFormat>CA-{00000000}</displayFormat>
        <label>Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>