force-app/main/default/objects/HT_Application__c/fields/Carrier_Entity_City__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Entity_City__c</fullName>
    <label>Carrier Entity City</label>
    <length>128</length>
    <type>Text</type>
</CustomField>