force-app/main/default/objects/HT_Application__c/fields/Carrier_Entity_Country__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Entity_Country__c</fullName>
    <label>Carrier Entity Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
                <default>true</default>
                <label>United States</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>