force-app/main/default/objects/HT_Application__c/fields/Carrier_Entity_County__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Entity_County__c</fullName>
    <label>Carrier Entity County</label>
    <length>64</length>
    <type>Text</type>
</CustomField>