force-app/main/default/objects/HT_Application__c/fields/Carrier_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Entity_Name__c</fullName>
    <label>Carrier Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>