force-app/main/default/objects/HT_Application__c/fields/Carrier_Entity_State__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Entity_State__c</fullName>
    <label>Carrier Entity State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>