force-app/main/default/objects/HT_Application__c/fields/Carrier_Entity_Street__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Entity_Street__c</fullName>
    <label>Carrier Entity Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>