force-app/main/default/objects/HT_Application__c/fields/Carrier_Entity_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Entity_Zip_Code__c</fullName>
    <label>Carrier Entity Zip Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>