force-app/main/default/objects/HT_Application__c/fields/Site_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Site_Legal_Entity__c</fullName>
    <formula>CASE(Project__r.strk__Site__r.HT_Legal_Entity__c,
&apos;PI Telecom Infrastructure LLC&apos;, &apos;PI Telecom Infrastructure, LLC&apos;,
&apos;Harmoni Towers AssetCo II LLC&apos;,&apos;Harmoni Towers AssetCo II, LLC&apos;,
&apos;Harmoni Towers AssetCo LLC&apos;,&apos;Harmoni Towers AssetCo, LLC&apos;,
&apos;PI Telecom Infrastructure T, LLC&apos;,&apos;PI Telecom Infrastructure T LLC&apos;,
&apos;PI Telecom Infrastructure V, LLC&apos;,&apos;PI Telecom Infrastructure V LLC&apos;,
&apos;PI Telecom Infrastructure A, LLC&apos;,&apos;PI Telecom Infrastructure A LLC&apos;,
TEXT(Project__r.strk__Site__r.HT_Legal_Entity__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Legal Entity</label>
    <type>Text</type>
</CustomField>